step-8-use-oauth-to-protect-backend/traeifik-using-oauth/templates/oauth.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: traefik-oauth
  name: traefik-oauth
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-oauth
  template:
    metadata:
      labels:
        k8s-app: traefik-oauth
    spec:
      containers:
      - env:
        - name: CLIENT_ID
          valueFrom:
            secretKeyRef:
              name:  oauth-client-id
              key: token
        - name: CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              name:  oauth-client-secret
              key: token
        - name: DOMAIN
          value: "rookout.com"
        - name: SECRET
          value: "something-random"
        - name: COOKIE_SECURE
          value: 'false'
        image: thomseddon/traefik-forward-auth
        imagePullPolicy: Always
        name: traefik-oauth
        ports:
        - containerPort: 4181
          protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: traefik-oauth
  name: traefik-oauth
spec:
  ports:
  - name: http
    port: 4181
    protocol: TCP
    targetPort: 4181
  selector:
    k8s-app: traefik-oauth
