step-8-use-oauth-to-protect-backend/traeifik-using-oauth/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://traefik-oauth:4181
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User

spec:
  rules:
  - host: oauth-traefik.rookout-demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world-service
          servicePort: 80
